--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.9.1"
+fragmentKtx = "1.8.7"
 kotlin = "2.1.20"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -7,6 +8,8 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 library = "4.1.0"
+lifecycleViewmodelKtx = "2.9.0"
+lifecycleLivedataKtx = "2.9.0"
 material = "1.12.0"
 hilt-android = "2.56.1"
 activity = "1.10.1"
@@ -14,16 +17,21 @@ constraintlayout = "2.2.1"
 exoplayer = "2.19.1"
 glide = '4.16.0'
 kotlinxSerialization = "1.9.0"
-navigation = '2.8.9'
+navigation = '2.9.0'
 ksp-android="2.1.20-1.0.32"
 gson = "2.11.0"
 navigationFragmentKtx = "1.0.0"
+recyclerview = "1.4.0"
 retrofit = "2.11.0"
 logging-interceptor = "4.12.0"
-media3 = "1.6.0"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -44,13 +52,6 @@ okhttp3={group="com.squareup.okhttp3",name="okhttp",version.ref="logging-interce
 retrofit-gson-converter={group="com.squareup.retrofit2",name="converter-gson",version.ref="retrofit"}
 logging-intercepter={group="com.squareup.okhttp3",name="logging-interceptor",version.ref="logging-interceptor"}
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.8.0" }
-androidx-media3-datasource = { group = "androidx.media3", name = "media3-datasource", version.ref = "media3" }
-androidx-media3-database = { group = "androidx.media3", name = "media3-database", version.ref = "media3" }
-androidx-media3-dash = { group = "androidx.media3", name = "media3-exoplayer-dash", version.ref = "media3" }
-androidx-media3-hls = { group = "androidx.media3", name = "media3-exoplayer-hls", version.ref = "media3" }
-androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
-androidx-media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
-androidx-media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
